--- a/index.html
+++ b/index.html
@@ -1,13 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discord</title>
-    <link rel="stylesheet" href="style/style.css">
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Discord</title>
+        <link rel="stylesheet" href="style/style.css">
+    </head>
+    <body>
+        <header>
+            <div class="container">
+                <nav class="main-menu">
+                    <div>
+                        <img src="" alt="">
+                    </div>
+                    <div>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <div><a href="#"></a></div>
+                </nav>
+                <div class="jumbo">
+                    <div class="jumbo-text"></div>
+                </div>
+            </div>
+        </header>
+        <!-- cambiare i numeri di section con altra descrizione -->
+        <main>
+            <div class="containter">
+                <section class="section-one">
+                    <picture>
+                        <img  class="col-60" src="" alt="">
+                    </picture>
+                    <div class="col-40"></div>
+                </section>
+
+                <section class="section-two">
+                    <picture>
+                        <img  class="col-60" src="" alt="">
+                    </picture>
+                    <img  class="col-60" src="" alt="">
+                </section>
+                <section class="section-three">
+                    <picture>
+                        <img  class="col-60" src="" alt="">
+                    </picture>
+                    <div class="col-40"></div>
+                </section>
+                <section class="section-four">
+                    <header class="section-four-menu"></header>
+                    <picture>
+                        <img  class="col-60" src="" alt="">
+                    </picture>
+                    <footer class="section-four-footer"></footer>
+                </section>
+            
+                <footer id="footer-main">
+                    <div class="col-30"></div>
+                    <div class="connections"></div>
+                    <div class="link-list">
+                        <ul>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                        </ul>
+
+                        <ul>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                    </div>
+                    <footer class="footer-footer">
+                        <img src="" alt="">
+                        <a href="#"></a>
+                    </footer>
+                </footer>
+            </div>
+        </main>
+    </body>
 </html>
