--- a/index.html
+++ b/index.html
@@ -9,60 +9,66 @@
     </head>
     <body>
         <header>
-            <div class="container">
-                <nav class="main-menu">
-                    <div>
-                        <img src="" alt="">
+                <div class="topbar"> 
+                    <div class="container .clearfix" >           
+                        <div class="col w-20">
+                            <img class="logo" src="img/logo.svg" alt="discord-logo">
+                        </div>
+                        <div class="col w-60 text-white">
+                                <ul>
+                                    <li><a href="#"></a>Scarica</li>
+                                    <li><a href="#"></a>Perchè Discord</li>
+                                    <li><a href="#"></a>Nitro</li>
+                                    <li><a href="#"></a>Sicurezza</li>
+                                    <li><a href="#"></a>Assistenza</li>
+                                </ul>
+                        </div>
+                        <div  class="col w-20 "><a class="btn-access bgc-white text-black" href="#">Accedi</a></div>
                     </div>
-                    <div>
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
-                    </div>
-                    <div><a href="#"></a></div>
-                </nav>
+                </div>
+                
+                <div class="container-botbar"></div>
                 <div class="jumbo">
                     <div class="jumbo-text"></div>
                 </div>
-            </div>
         </header>
         <!-- cambiare i numeri di section con altra descrizione -->
         <main>
             <div class="containter">
-                <section class="section-one">
+                <section class="section-one clearfix">
                     <picture>
-                        <img  class="col-60" src="" alt="">
+                        <img  class="col-w60" src="" alt="">
                     </picture>
-                    <div class="col-40"></div>
+                    <div class="img-text col-w40">
+                        <div>
+
+                        </div>
+                    </div>
                 </section>
 
-                <section class="section-two">
+                <section class="section-two clearfix">
+                    <div class="img-text col-w40"></div>
                     <picture>
-                        <img  class="col-60" src="" alt="">
+                        <img  class="col-w60" src="" alt="">
                     </picture>
-                    <img  class="col-60" src="" alt="">
                 </section>
-                <section class="section-three">
+                <section class="section-three clearfix">
                     <picture>
-                        <img  class="col-60" src="" alt="">
+                        <img  class="col-w60" src="" alt="">
                     </picture>
-                    <div class="col-40"></div>
+                    <div class="img-text col-w40"></div>
                 </section>
-                <section class="section-four">
+                <section class="section-four .clearfix">
                     <header class="section-four-menu"></header>
                     <picture>
-                        <img  class="col-60" src="" alt="">
+                        <img  class="col-w100" src="" alt="">
                     </picture>
                     <footer class="section-four-footer"></footer>
                 </section>
             
-                <footer id="footer-main">
-                    <div class="col-30"></div>
-                    <div class="connections"></div>
+                <footer id="footer-main" class="clearfix">
+                    <div class="col-w30"></div>
+                    <div class="connections col-w70"></div>
                     <div class="link-list">
                         <ul>
                             <li><a href="#"></a></li>
