--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
                 <div class="topbar"> 
-                    <div class="container .clearfix" >           
+                    <div class="container clearfix" >           
                         <div class="col w-20">
                             <img class="logo" src="img/logo.svg" alt="discord-logo">
                         </div>
@@ -23,13 +23,17 @@
                                     <li><a href="#"></a>Assistenza</li>
                                 </ul>
                         </div>
-                        <div  class="col w-20 "><a class="btn-access bgc-white text-black" href="#">Accedi</a></div>
+                        <div  class="col w-20 "><a class="btn-small bgc-white text-black" href="#">Accedi</a></div>
                     </div>
-                </div>
-                
-                <div class="container-botbar"></div>
+                </div>               
+                <div class="container clearfix"></div>
                 <div class="jumbo">
-                    <div class="jumbo-text"></div>
+                    <div class="jumbo-text text-white">
+                        <h1 class="title">il tuo posto per parlare</h1>
+                        <h2 class="text-header f-size-16px">Che tu faccia parte di un club scolastico,gruppo di gamer, comunità artistica mondiale, o semplicemente un gruppo di amici che vuole passare il tempo assieme,Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</h2>
+                        <a class="btn-big bgc-white text-black" id="hover-black" href=""><span class="f-size-20px">&#129047;</span>  Scarica per Mac</a>
+                        <a class="btn-big bgc-black text-white" id="hover-white" href=""> Discord nel tuo browser</a>
+                    </div>
                 </div>
         </header>
         <!-- cambiare i numeri di section con altra descrizione -->
