--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                         <div  class="col w-20 "><a class="btn-small bgc-white text-black" href="#">Accedi</a></div>
                     </div>
                 </div>               
-                <div class="container clearfix"></div>
                 <div class="jumbo">
                     <div class="jumbo-text text-white">
                         <h1 class="title">il tuo posto per parlare</h1>
@@ -38,38 +37,19 @@
         </header>
         <!-- cambiare i numeri di section con altra descrizione -->
         <main>
-            <div class="containter">
-                <section class="section-one clearfix">
-                    <picture>
-                        <img  class="col-w60" src="" alt="">
-                    </picture>
-                    <div class="img-text col-w40">
-                        <div>
-
+                <section class="section-one">
+                    <div class="container clearfix">
+                        <picture class="img col w-60">
+                            <img class="" src="img/item1.svg" alt="rana-che-legge">
+                        </picture>
+                        <div class="margin-left-x col w-30">
+                            <div class="img-text">
+                                <h2 class="section-title text-color-lessblack">Un luogo a invito con tanto spazio per parlare</h2>
+                                <h3 class="text-color-lessblack ">I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo</h3>
+                            </div>
                         </div>
                     </div>
-                </section>
-
-                <section class="section-two clearfix">
-                    <div class="img-text col-w40"></div>
-                    <picture>
-                        <img  class="col-w60" src="" alt="">
-                    </picture>
-                </section>
-                <section class="section-three clearfix">
-                    <picture>
-                        <img  class="col-w60" src="" alt="">
-                    </picture>
-                    <div class="img-text col-w40"></div>
-                </section>
-                <section class="section-four .clearfix">
-                    <header class="section-four-menu"></header>
-                    <picture>
-                        <img  class="col-w100" src="" alt="">
-                    </picture>
-                    <footer class="section-four-footer"></footer>
-                </section>
-            
+                </section>           
                 <footer id="footer-main" class="clearfix">
                     <div class="col-w30"></div>
                     <div class="connections col-w70"></div>
@@ -119,7 +99,6 @@
                         <a href="#"></a>
                     </footer>
                 </footer>
-            </div>
         </main>
     </body>
 </html>
