--- a/index.html
+++ b/index.html
@@ -111,10 +111,68 @@
                             <h2 class="f-size-34px">Il tuo posto per parlare</h2>
                             <span ><a href="#" class="dec-none">italiano</a></span>
                         </div> 
-                        <div class="col w-70 text-white text-align-left"> sadasdadasd</div>
+                        <div class="col w-70 text-white text-align-left"> 
+
+                            <div class="vertical-menu product">
+                                <ul class="vertical-menu">
+                                    <li><a href="#" class="text-blue">Prodotto</a></li>
+                                    <li><a class="text-white" href="#">Scarica</a></li>
+                                    <li><a class="text-white" href="#">Perchè Discord</a></li>
+                                    <li><a class="text-white" href="#">Sicurezza</a></li>  
+                                    <li><a class="text-white" href="#">Nitro</a></li>
+                                    <li><a class="text-white" href="#">Assistenza</a></li>  
+                                </ul>
+                            </div>    
+                            <div class="vertical-menu product">
+                                <ul class="vertical-menu">
+                                    <li><a class="text-blue" href="#" >Compagnia</a></li>
+                                    <li><a class="text-white" href="#">Chi siamo</a></li>
+                                    <li><a class="text-white" href="#">Lavora con noi</a></li>
+                                    <li><a class="text-white" href="#">Marchio</a></li>  
+                                    <li><a class="text-white" href="#">Redazione</a></li>
+                                    <li><a class="text-white" href="#">Negozio</a></li>  
+                                </ul>
+                            </div>    
+                            <div class="vertical-menu product">
+                                <ul class="vertical-menu">
+                                    <li><a class="text-blue" href="#">Rirorse</a></li>
+                                    <li><a class="text-white" href="#">Scarica</a></li>
+                                    <li><a class="text-white" href="#">Perchè Discord</a></li>
+                                    <li><a class="text-white" href="#">Sicurezza</a></li>  
+                                    <li><a class="text-white" href="#">Nitro</a></li>
+                                    <li><a class="text-white" href="#">Assistenza</a></li>
+                                    <li><a class="text-white" href="#">Scarica</a></li>
+                                    <li><a class="text-white" href="#">Perchè Discord</a></li>
+                                    <li><a class="text-white" href="#">Sicurezza</a></li>  
+                                    <li><a class="text-white" href="#">Nitro</a></li>
+                                    <li><a class="text-white" href="#">Assistenza</a></li>  
+                                    <li><a class="text-white" href="#">Assistenza</a></li>  
+                                </ul>
+                            </div>    
+                            <div class="vertical-menu product">
+                                <ul class="vertical-menu">
+                                    <li><a class="text-blue"  href="#" >Norme</a></li>
+                                    <li><a class="text-white" href="#">Scarica</a></li>
+                                    <li><a class="text-white" href="#">Perchè Discord</a></li>
+                                    <li><a class="text-white" href="#">Sicurezza</a></li>  
+                                    <li><a class="text-white" href="#">Nitro</a></li>
+                                    <li><a class="text-white" href="#">Assistenza</a></li> 
+                                </ul>
+                            </div>    
+                        </div>
                     </section>
-                </div>
-                
+                </div> 
+                <section>
+                    <div class="text-align-left border-light-blue container .clearfix">
+                        <hr>
+                        <div class="content-footer col w-20">
+                            <img id="logo-footer" src="img/logo.svg" alt="logo">
+                        </div>
+                        <div class="btn-footer col w-25">
+                            <div><a class="btn-small bgc-lightblue text-white" href="#">Accedi</a></div>
+                        </div>
+                    </div>
+                </section>             
             </footer>
         </body>
 </html>
